--- a/index.html
+++ b/index.html
@@ -142,6 +142,56 @@
 </div>
 <div class="seperator" > </div>
 </div>
+
+  <div class="row ">
+    <div class="col-full m-5 row no-flex-wrap">
+    <i class="fa-sharp fa-solid fa-location-dot payment-feature-icon"></i>
+  <div class="column">
+<span class="payment-feature-title">Mükemmel konum</span>
+
+<p class="payment-feature">Yakın zamanda konaklayan misafirler bu konuma %100 oranında 5 yıldızlı puan verdi.
+</p>
+</div>
+</div>
+
+
+
+</div>
+
+<div class="row ">
+  <div class="col-full  row no-flex-wrap">
+    <i class="fa-solid fa-person-chalkboard payment-feature-icon"></i>
+<div class="column">
+<span class="payment-feature-title">Emrah Süper Ev Sahibi</span>
+<p class="payment-feature">Süper Ev Sahipleri, kendilerini misafirler için mükemmel konaklamalar sunmaya adamış deneyimli, yüksek puanlı ev sahipleridir.</p>
+</div>
+
+</div>
+<div class="seperator"></div> 
+
+  <div class="col-full">
+    <div class="aircover-container">
+  <img src="aircover.png" width="10" height="20" />
+  </div>
+  <p class="detail-info-paragraph">
+    Her rezervasyon ev sahibi iptallerine, kayıt hatalarına ve girişle ilgili problemler gibi diğer sorunlara karşı ücretsiz olarak koruma altındadır.
+  </p>
+  <br>  
+  <a style="color: #393939;" target="_blank" href="https://www.airbnb.com.tr/rooms/33516671?adults=1&category_tag=Tag%3A789&children=0&infants=0&pets=0&search_mode=flex_destinations_search&check_in=2023-02-17&check_out=2023-02-22&federated_search_id=38b6a9f3-d41d-44ae-a1f3-b80d1b0b776e&source_impression_id=p3_1676549977_Dr7xW0q18%2BUEfDJI">Daha fazla bilgi edinin</a>
+  </div>
+<div class="seperator"></div>
+<p class="detail-info-paragraph">
+  dalyan'ın en güzel manzaralı bölgesinde, dalyan plaza residence suites içinde özel bir daire. residence'a ait, misafirlerin kullanabileceği beach,  2 oda, amerikan mutfak, keyif dolu bir balkon, ön bahçede havuz  ve muhteşem bir manzara. (residence'in kendine ait beach'ine asansörden indikten sonra yürüyerek 1 dk'da ulaşabilirsiniz. Havuz ve beach Eylül ayı itibarı ile  Haziran ayına kadar kapanmıştır. Ancak denize giriş yapılabilir.
+</p>
+<div class="seperator"></div>
+<div class="column">
+<h2 class="bedroom-title">Nerede Uyuyacaksınız ? </h2>
+<span></span>
+<img  src="bedroom.png" class="bedroom-img" />
+<span    id="YatakOdası">Yatak odası</span>
+<span class="detail-info-paragraph" id="YatakOdasıDetay">Çift kişilik Baza</span>
+</div>
+</div>
 </div>
 </div>  
 <div class="col-3_1">
